--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </BODY>
 <center><strong> Danna Velntina Reyes Sarmiento.</strong></center>
 <center><img src=https://i.imgur.com/fwoOVJj.jpgwidth width="400" height="500"/></center>
-<<iframe width="400" height="500" src="https://www.youtube.com/embed/lDQinK3bYDQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<centre><<iframe width="400" height="500" src="https://www.youtube.com/embed/lDQinK3bYDQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 <hr>
 Tengo tantas cosas para decirte, te quiero no por quien eres, sino por quien soy cuando estoy contigo Danna mi morchis hermosa
 puedes ser solamente una persona para el mundo pero para una persona tu eres el mundo entero 
