--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <body>
 <h1> El Colombiano.com  </h1>
 <br>
-<h2> Claudia con los pantalones bien puestos </>
+<h2> Política </h2>
+<h3> Claudia con los pantalones bien puestos   </h3>
+<p> cinco meses después de ser elegida y romper los esquemas en la política nacional con la llegada de la pandemia al pais la alcaldesa “se pone los pantalones” y reacciona más rápidamente que el gobierno dirigido por ivan duque el cual piensa en el bolsillo de los grandes empresarios mientras la alcaldesa toma medidas para cuidar al colombiano de a pie del Coronavirus. Al tomar medias radicales y definitivas para frenar esta pandemia en la capital la cual alverga el 50% de los casos confirmados en todo el territorio nacional, dand
+
+
+
+</p>
 </br>
 <br>
-<h2>  </>
+<h2> Deportes </>
+<h3>  La NBA se sienta a hablar del coronavirus </h3>
+<p> *******
+</p>
 </br>
+
+
+
 
 
