--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <br>
 <h2> Política </h2>
 <h3> Claudia con los pantalones bien puestos   </h3>
-<p> cinco meses después de ser elegida y romper los esquemas en la política nacional con 
-  la llegada de la pandemia al pais la alcaldesa “se pone los pantalones” y reacciona más 
-  rápidamente que el gobierno dirigido por ivan duque el cual piensa en el bolsillo de los
-  grandes empresarios mientras la alcaldesa toma medidas para cuidar al colombiano de a pie del Coronavirus.
-  Al tomar medias radicales y definitivas para frenar esta pandemia en la capital la cual alverga el 50% 
-  de los casos confirmados en todo el territorio nacional, 
+<p> cinco meses después de ser elegida y romper los esquemas en la política nacional con la llegada de la pandemia al país la alcaldesa “se pone los pantalones” y reacciona más rápidamente que el gobierno dirigido por iván duque el cual piensa en el bolsillo de los grandes empresarios mientras la alcaldesa toma medidas para cuidar al colombiano de a pie del Coronavirus. Al tomar medidas radicales y definitivas para frenar esta pandemia en la capital la cual alberga el 50% de los casos confirmados en todo el territorio nacional, dando como resultado el cierre total de eventos masivos y el simulacro en la capital para analizar el comportamiento del capitaleño ante una aislamiento a largo plazo, mientras que iván duque 10 días después de la confirmación del primer caso de coronavirus en el país dio órdenes de cerrar la terminal de aeria de transporte “ El dorado” 
+
+
+
 </p>
 </br>
 <br>
@@ -20,8 +18,6 @@
 <p> *******
 </p>
 </br>
-
-
 
 
 
