--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 <br>
 <h2> Política </h2>
 <h3> Claudia con los pantalones bien puestos   </h3>
-<p> cinco meses después de ser elegida y romper los esquemas en la política nacional con la llegada de la pandemia al país la alcaldesa <strong> “se pone los pantalones” </strong> y reacciona más rápidamente que el gobierno dirigido por <em> iván duque </em> el cual piensa en el bolsillo de los grandes empresarios mientras la alcaldesa toma medidas para cuidar al colombiano de a pie del Coronavirus. Al tomar medidas radicales y definitivas para frenar esta pandemia en la capital la cual alberga el 50% de los casos confirmados en todo el territorio nacional, dando como resultado el cierre total de eventos masivos y el simulacro en la capital para analizar el comportamiento del capitaleño ante una aislamiento a largo plazo, mientras que <em> iván duque </em> 10 días después de la confirmación del primer caso de coronavirus en el país dio órdenes de cerrar la terminal de aeria de transporte <em><strong>“El dorado” </strong></em> 
+<p> cinco meses después de ser elegida y romper los esquemas en la política nacional con la llegada de la pandemia al país la alcaldesa <strong> “se pone los pantalones” </strong> y reacciona más rápidamente que el gobierno dirigido por <em> iván duque </em> el cual piensa en el bolsillo de los grandes empresarios mientras la alcaldesa toma medidas para cuidar al colombiano de a pie del Coronavirus. Al tomar medidas radicales y definitivas para frenar esta pandemia en la capital la cual alberga el 50% de los casos confirmados en todo el territorio nacional, dando como resultado el cierre total de eventos masivos y el simulacro en la capital para analizar el comportamiento del capitaleño ante una aislamiento a largo plazo, mientras que <em> iván duque </em> 10 días después de la confirmación del primer caso de coronavirus en el país dio órdenes de cerrar la terminal de aeria de transporte <em><strong>“El dorado”. </strong></em> 
 </p>
 </br>
 <br>
 <h2> Deportes </>
-<h3>  La NBA se sienta a hablar del coronavirus </h3>
-<p>La NBA ha fijado para el miércoles una conferencia telefónica con los propietarios de las 
- 30 franquicias para discutir medidas a tomar ante el coronavirus y cuáles serían los pasos a tomar. 
- <em> LeBron James </em> dijo recientemente que él no jugaría a puerta cerrada, algo que han apoyado 
- otros deportistas como <em> Gabriel Paulista</em>, futbolista del Valencia.
-Tal y como ha informado Adrian Wojnarowski en su cuenta de Twitter, la preocupación por la expansión del Covid-19 en Estados Unidos preocupa a los propietarios y ejecutivos de las franquicias. De hecho, se baraja que los partidos se puedan jugar a puerta cerrada, algo que como decimos a jugadores como la estrella de los Lakers no les hace gracia.
+<h3> <em><strong> La NBA</strong></em> se sienta a hablar del coronavirus </h3>
+<p>La NBA ha fijado para el miércoles una conferencia telefónica con los propietarios de las 30 franquicias para discutir medidas a tomar ante el coronavirus y cuáles serían los pasos a tomar. <em>LeBron James</em> dijo recientemente que él no jugaría a puerta cerrada, algo que han apoyado otros deportistas como <em>Gabriel Paulista</em>, futbolista del Valencia.
+Tal y como ha informado <em>Adrian Wojnarowski<em> en su cuenta de Twitter, la preocupación por la expansión del <strong>Covid-19</strong> en Estados Unidos preocupa a los propietarios y ejecutivos de las franquicias. De hecho, se baraja que los partidos se puedan jugar a puerta cerrada, algo que como decimos a jugadores como la estrella de los <em><strong>Lakers</strong></em>  no les hace gracia.
 Este escenario es el que los equipos deben estar preparados para ejecutar. Es el más razonable dada la expansión de esta epidemia que sacude a todo el mundo. Por el momento se desconocen más noticias sobre medidas tomadas.
  </p>
 </br>
+
+
+
 
 
